// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar Component Snapshot matches snapshot for admin user 1`] = `
<DocumentFragment>
  <nav
    class="h-16 shadow-lg bg-neutral-100"
  >
    <div
      class="h-full container mx-auto flex items-center px-4 justify-between"
    >
      <a
        data-discover="true"
        href="/"
      >
        <div
          class="logo"
        >
          Parts Search
        </div>
      </a>
      <div
        class="hidden lg:flex items-center w-full justify-between max-w-sm border border-gray-400 rounded-full focus-within:shadow-md pl-2 bg-white"
      >
        <input
          class="w-full outline-none pl-2"
          placeholder="search product here..."
          type="text"
        />
        <a
          class="text-lg min-w-[50px] h-8 flex items-center pl-3 rounded-r-full bg-slate-400 cursor-pointer"
          data-discover="true"
          href="/search?q="
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M456.69 421.39 362.6 327.3a173.81 173.81 0 0 0 34.84-104.58C397.44 126.38 319.06 48 222.72 48S48 126.38 48 222.72s78.38 174.72 174.72 174.72A173.81 173.81 0 0 0 327.3 362.6l94.09 94.09a25 25 0 0 0 35.3-35.3zM97.92 222.72a124.8 124.8 0 1 1 124.8 124.8 124.95 124.95 0 0 1-124.8-124.8z"
            />
          </svg>
        </a>
      </div>
      <div
        class="flex items-center gap-6"
      >
        <div
          class="relative flex justify-center"
        >
          <div
            class="text-xl"
            id="userIcon"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 288c79.5 0 144-64.5 144-144S335.5 0 256 0 112 64.5 112 144s64.5 144 144 144zm128 32h-55.1c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16H128C57.3 320 0 377.3 0 448v16c0 26.5 21.5 48 48 48h416c26.5 0 48-21.5 48-48v-16c0-70.7-57.3-128-128-128z"
              />
            </svg>
          </div>
        </div>
        <a
          class="text-xl cursor-pointer hover:text-gray-400"
          data-discover="true"
          href="/cart"
        >
          <span
            class="flex items-center"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 576 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M528.12 301.319l47.273-208C578.806 78.301 567.391 64 551.99 64H159.208l-9.166-44.81C147.758 8.021 137.93 0 126.529 0H24C10.745 0 0 10.745 0 24v16c0 13.255 10.745 24 24 24h69.883l70.248 343.435C147.325 417.1 136 435.222 136 456c0 30.928 25.072 56 56 56s56-25.072 56-56c0-15.674-6.447-29.835-16.824-40h209.647C430.447 426.165 424 440.326 424 456c0 30.928 25.072 56 56 56s56-25.072 56-56c0-22.172-12.888-41.332-31.579-50.405l5.517-24.276c3.413-15.018-8.002-29.319-23.403-29.319H218.117l-6.545-32h293.145c11.206 0 20.92-7.754 23.403-18.681z"
              />
            </svg>
            <div>
              [0]
            </div>
          </span>
        </a>
        <div>
          <button
            class="hover:text-gray-400 text-xl flex items-center"
          >
            Logout
          </button>
        </div>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`Navbar Component Snapshot matches snapshot for logged-in state 1`] = `
<DocumentFragment>
  <nav
    class="h-16 shadow-lg bg-neutral-100"
  >
    <div
      class="h-full container mx-auto flex items-center px-4 justify-between"
    >
      <a
        data-discover="true"
        href="/"
      >
        <div
          class="logo"
        >
          Parts Search
        </div>
      </a>
      <div
        class="hidden lg:flex items-center w-full justify-between max-w-sm border border-gray-400 rounded-full focus-within:shadow-md pl-2 bg-white"
      >
        <input
          class="w-full outline-none pl-2"
          placeholder="search product here..."
          type="text"
        />
        <a
          class="text-lg min-w-[50px] h-8 flex items-center pl-3 rounded-r-full bg-slate-400 cursor-pointer"
          data-discover="true"
          href="/search?q="
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M456.69 421.39 362.6 327.3a173.81 173.81 0 0 0 34.84-104.58C397.44 126.38 319.06 48 222.72 48S48 126.38 48 222.72s78.38 174.72 174.72 174.72A173.81 173.81 0 0 0 327.3 362.6l94.09 94.09a25 25 0 0 0 35.3-35.3zM97.92 222.72a124.8 124.8 0 1 1 124.8 124.8 124.95 124.95 0 0 1-124.8-124.8z"
            />
          </svg>
        </a>
      </div>
      <div
        class="flex items-center gap-6"
      >
        <div
          class="relative flex justify-center"
        >
          <div
            class="text-xl"
            id="userIcon"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 288c79.5 0 144-64.5 144-144S335.5 0 256 0 112 64.5 112 144s64.5 144 144 144zm128 32h-55.1c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16H128C57.3 320 0 377.3 0 448v16c0 26.5 21.5 48 48 48h416c26.5 0 48-21.5 48-48v-16c0-70.7-57.3-128-128-128z"
              />
            </svg>
          </div>
        </div>
        <a
          class="text-xl cursor-pointer hover:text-gray-400"
          data-discover="true"
          href="/cart"
        >
          <span
            class="flex items-center"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 576 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M528.12 301.319l47.273-208C578.806 78.301 567.391 64 551.99 64H159.208l-9.166-44.81C147.758 8.021 137.93 0 126.529 0H24C10.745 0 0 10.745 0 24v16c0 13.255 10.745 24 24 24h69.883l70.248 343.435C147.325 417.1 136 435.222 136 456c0 30.928 25.072 56 56 56s56-25.072 56-56c0-15.674-6.447-29.835-16.824-40h209.647C430.447 426.165 424 440.326 424 456c0 30.928 25.072 56 56 56s56-25.072 56-56c0-22.172-12.888-41.332-31.579-50.405l5.517-24.276c3.413-15.018-8.002-29.319-23.403-29.319H218.117l-6.545-32h293.145c11.206 0 20.92-7.754 23.403-18.681z"
              />
            </svg>
            <div>
              [2]
            </div>
          </span>
        </a>
        <div>
          <button
            class="hover:text-gray-400 text-xl flex items-center"
          >
            Logout
          </button>
        </div>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`Navbar Component Snapshot matches snapshot for logged-out state 1`] = `
<DocumentFragment>
  <nav
    class="h-16 shadow-lg bg-neutral-100"
  >
    <div
      class="h-full container mx-auto flex items-center px-4 justify-between"
    >
      <a
        data-discover="true"
        href="/"
      >
        <div
          class="logo"
        >
          Parts Search
        </div>
      </a>
      <div
        class="hidden lg:flex items-center w-full justify-between max-w-sm border border-gray-400 rounded-full focus-within:shadow-md pl-2 bg-white"
      >
        <input
          class="w-full outline-none pl-2"
          placeholder="search product here..."
          type="text"
        />
        <a
          class="text-lg min-w-[50px] h-8 flex items-center pl-3 rounded-r-full bg-slate-400 cursor-pointer"
          data-discover="true"
          href="/search?q="
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M456.69 421.39 362.6 327.3a173.81 173.81 0 0 0 34.84-104.58C397.44 126.38 319.06 48 222.72 48S48 126.38 48 222.72s78.38 174.72 174.72 174.72A173.81 173.81 0 0 0 327.3 362.6l94.09 94.09a25 25 0 0 0 35.3-35.3zM97.92 222.72a124.8 124.8 0 1 1 124.8 124.8 124.95 124.95 0 0 1-124.8-124.8z"
            />
          </svg>
        </a>
      </div>
      <div
        class="flex items-center gap-6"
      >
        <div
          class="relative flex justify-center"
        />
        <div>
          <a
            data-discover="true"
            href="/login"
          >
            <button
              class="hover:text-gray-400 text-xl flex items-center"
            >
              Login 
              <span
                class="text-2xl"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M192 176v-40a40 40 0 0 1 40-40h160a40 40 0 0 1 40 40v240a40 40 0 0 1-40 40H240c-22.09 0-48-17.91-48-40v-40"
                    fill="none"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="32"
                  />
                  <path
                    d="m288 336 80-80-80-80M80 256h272"
                    fill="none"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="32"
                  />
                </svg>
              </span>
            </button>
          </a>
        </div>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;
